# rufi-demo

./: .gitignore
esp-client/: Cargo.toml  cfg.toml.example
esp-client/.cargo/: config.toml
esp-client/src/: discovery.rs  lib.rs  main.rs  nbr_sensor_setup.rs
sim-client/: Cargo.toml
sim-client/src/: main.rs
